--- a/yatube_api_project/requirements.txt
+++ b/yatube_api_project/requirements.txt
@@ -1,4 +1,5 @@
-Django==2.2.16
+gunicorn==20.0.4
+Django==3.2
 pytest==6.2.4
 pytest-pythonpath==0.7.3
 pytest-django==4.4.0
@@ -6,6 +7,6 @@ djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.2
 django-filter
 djoser==2.1.0
-Pillow==8.3.1
 PyJWT==2.1.0
+psycopg2-binary==2.9.3
 requests==2.26.0
