--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.3'
 services:
   yatube_db:
     image: postgres:13.0-alpine
+    environment:
+        POSTGRES_PASSWORD: changeme
     volumes:
       - /var/lib/postgresql/data/
     env_file:
@@ -33,11 +35,10 @@ services:
   yatube_nginx:
     image: nginx:1.19.3
     ports:
-      - "80:80"
+      - "800:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      # - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
