--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -24,9 +24,12 @@ server {
         root /var/html;
     }
 
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
+    location /redoc/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_pass http://yatube_api:8000/redoc/;
     }
 
     location / {
