refactor yatube_web, add api app

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-python_paths = .
+python_paths = yatube_project/
 DJANGO_SETTINGS_MODULE = yatube.settings
 norecursedirs = env/*
 addopts = -vv -p no:cacheprovider
