--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 gunicorn==20.0.4
 Django==3.2
+djangorestframework==3.12.4
+djangorestframework-simplejwt==4.7.2
+django-filter
+djoser==2.1.0
 mixer==7.1.2
 Pillow==9.4.0
+PyJWT==2.1.0
 pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
-psycopg2-binary==2.9.2
+psycopg2-binary==2.9.3
 requests==2.26.0
 six==1.16.0
 sorl-thumbnail==12.7.0
