--- a/.github/workflows/not_master_yatube_workflow.yml
+++ b/.github/workflows/not_master_yatube_workflow.yml
@@ -1,6 +1,5 @@
 name: not_master_yamdb_workflow
 
-# on: [push]
 on:
   push:
     branches:
@@ -34,7 +33,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        pip install -r api_yamdb/requirements.txt 
+        pip install -r yatube_project/requirements.txt 
 
     - name: Test with flake8 and django tests
       env:
@@ -47,7 +46,7 @@ jobs:
       run: |
         python -m flake8
         pytest --reuse-db
-        cd api_yamdb/
+        cd yatube_project/
         python manage.py test
 
   send_message:
